Fix scroll in layered nav items, fix width of layered nav items, add margin after navigation on mobile version

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -36,6 +36,18 @@
 		}
 	}
 
+	@include respond(medium) {
+		// to-do
+		.dropdown-menu {
+	    position: static;
+	    width: 100%;
+		}
+
+		#navbar-collapse {
+			margin-bottom: 1rem;
+		}
+	}
+
 	// temp
 	@include respond(medium) {
 		&__t-logo-row,
